# chronolog

./: README.md  pyproject.toml
chronolog/: __init__.py  logger.py
chronolog/tests/: test_logger.py
tests/: test_chronolog.py
